variables.RunFour.scala.code
var numBiscuit = 0

while (!estSurBiscuit() && numBiscuit != 4) {
  avance()
  numBiscuit = numBiscuit + 1
  
  if (estSurBiscuit() && numBiscuit != 4) {
  avance()
}
